# GTran

./: .cproject  .gitignore  .project  3_machine.cfg  3ib_conf  3node  5ib_conf  5node  6ib_conf  6ib_w21_w26_conf  CMakeLists.txt  HOW_TO_RUN.txt  LICENSE  README.md  auto-build.sh  chmod.sh  conf_ib  gq-hfs.txt  gquery-conf.ini  ground_truth_dbpedia  gtran-conf.ini  ib_cfg  ib_conf  machine.cfg  machine_w21_26.cfg  runtime_environment.sh  server-manual.py  small-amazon.gquery-conf.ini  small.gquery-conf.ini  start-client.sh  start-server-small-amazon-10-nodes.sh  start-server-small-amazon-7-nodes.sh  start-server-toy-3-nodes.sh  start-server.sh  start_client.sh  thpt_config  toy.gquery-conf.ini
actor/: CMakeLists.txt  abstract_actor.hpp  actor_cache.hpp  actor_lru_cache.hpp  actor_object.cpp  actor_object.hpp  actor_validation_object.cpp  actor_validation_object.hpp  add_edge_actor.cpp  add_edge_actor.hpp  add_vertex_actor.hpp  as_actor.hpp  barrier_actor.cpp  barrier_actor.hpp  barrier_actor.tpp  branch_actor.hpp  commit_actor.cpp  commit_actor.hpp  config_actor.hpp  drop_actor.cpp  drop_actor.hpp  has_actor.hpp  has_label_actor.hpp  hw_actor.hpp  index_actor.hpp  init_actor.hpp  is_actor.hpp  key_actor.hpp  label_actor.hpp  labelled_branch_actor.hpp  predicate.hpp  project_actor.hpp  properties_actor.hpp  property_actor.hpp  redirect_actor.hpp  repeat_actor.hpp  select_actor.hpp  status_actor.cpp  status_actor.hpp  traversal_actor.hpp  (+4 more)
base/: CMakeLists.txt  abstract_id_mapper.hpp  abstract_mailbox.hpp  abstract_sender.hpp  abstract_thread_safe_queue.hpp  client_connection.cpp  client_connection.hpp  communication.cpp  communication.hpp  communication.tpp  core_affinity.hpp  cpuinfo_util.cpp  cpuinfo_util.hpp  node.cpp  node.hpp  node_util.cpp  node_util.hpp  predicate.cpp  predicate.hpp  range.hpp  rdma.cpp  rdma.hpp  sarray.hpp  sarray_binstream.cpp  sarray_binstream.hpp  sender.cpp  sender.hpp  serialization.cpp  serialization.hpp  serialization.tpp  tcp_helper.cpp  thread_safe_queue.hpp  throughput_monitor.hpp  type.cpp  type.hpp
core/: CMakeLists.txt  RCT.cpp  RCT.hpp  abstract_id_mapper.hpp  abstract_mailbox.hpp  actors_adapter.hpp  buffer.hpp  common.cpp  common.hpp  coordinator.cpp  coordinator.hpp  data_loader.hpp  exec_plan.cpp  exec_plan.hpp  experts_adapter.hpp  factory.hpp  id_mapper.hpp  index_store.hpp  mailbox.cpp  mailbox.hpp  message.cpp  message.hpp  message.tpp  message_collector.hpp  parser.cpp  parser.hpp  progress_monitor.hpp  rdma_mailbox.cpp  rdma_mailbox.hpp  rdma_thread_safe_queue.hpp  result_collector.hpp  ring_buffer.cpp  ring_buffer.hpp  running_trx_list.cpp  running_trx_list.hpp  tcp_mailbox.cpp  tcp_mailbox.hpp  thread_safe_queue.hpp  transaction_status_table.cpp  transaction_status_table.hpp  (+10 more)
docs/: HOW_TO_RUN.txt  Tutorial.md  ldbc_index_build  thpt_config2
driver/: CMakeLists.txt  Client.hpp  RCT.cpp  RCT.hpp  client.cpp  client.hpp  console.hpp  gquery.cpp  hoster.hpp  master.hpp  server.cpp  transactions_table.cpp  transactions_table.hpp  worker.hpp
expert/: CMakeLists.txt  abstract_expert.hpp  add_edge_expert.cpp  add_edge_expert.hpp  add_vertex_expert.hpp  as_expert.hpp  barrier_expert.cpp  barrier_expert.hpp  barrier_expert.tpp  branch_expert.hpp  commit_expert.cpp  commit_expert.hpp  config_expert.hpp  drop_expert.cpp  drop_expert.hpp  expert_object.cpp  expert_object.hpp  expert_validation_object.cpp  expert_validation_object.hpp  has_expert.hpp  has_label_expert.hpp  index_expert.hpp  init_expert.hpp  is_expert.hpp  key_expert.hpp  label_expert.hpp  labelled_branch_expert.hpp  project_expert.hpp  properties_expert.hpp  property_expert.hpp  repeat_expert.hpp  select_expert.hpp  status_expert.cpp  status_expert.hpp  terminate_expert.cpp  terminate_expert.hpp  traversal_expert.hpp  validation_expert.cpp  validation_expert.hpp  values_expert.hpp  (+1 more)
layout/: CMakeLists.txt  concurrent_mem_pool.hpp  concurrent_mem_pool.tpp  data_storage.cpp  data_storage.hpp  edge_property_row.cpp  edge_property_row.hpp  garbage_collector.cpp  garbage_collector.hpp  gc_consumer.cpp  gc_consumer.hpp  gc_executor.cpp  gc_executor.hpp  gc_producer.cpp  gc_producer.hpp  gc_producer.tpp  gc_scanner.hpp  gc_task.hpp  gc_worker.hpp  hdfs_data_loader.cpp  hdfs_data_loader.hpp  index_store.cpp  index_store.hpp  index_store.tpp  layout_type.cpp  layout_type.hpp  mpi_snapshot_manager.cpp  mpi_snapshot_manager.hpp  mvcc_definition.cpp  mvcc_definition.hpp  mvcc_kv_store.cpp  mvcc_kv_store.hpp  mvcc_list.hpp  mvcc_list.tpp  mvcc_value_store.cpp  mvcc_value_store.hpp  pmt_rct_table.cpp  pmt_rct_table.hpp  property_row_list.hpp  property_row_list.tpp  (+8 more)
mvcc/: test_concurrent_ll.cpp
parser/: parser.hpp  utils.cpp  utils.hpp
script/: 10client.sh  10server.sh  3client.sh  3server.sh  4client.sh  4server.sh  5client.sh  5server.sh  6client.sh  6server.sh  7client.sh  7server.sh  8client.sh  8server.sh  9client.sh  9server.sh  client-manual.sh  combine_timer.py  cpplint.py  parse_calculate.py  run_client.sh  run_multiple_client.sh  run_server.sh  use_small.sh  (+1 more)
storage/: CMakeLists.txt  abstract_cache.hpp  abstract_storage.hpp  abstract_storage_adaptor.hpp  data_store.cpp  data_store.hpp  ekvstore.cpp  ekvstore.hpp  kvstore.hpp  layout.cpp  layout.hpp  mpi_snapshot.cpp  mpi_snapshot.hpp  snapshot_func.hpp  tcp_helper.cpp  tcp_helper.hpp  vkvstore.cpp  vkvstore.hpp
utils/: CMakeLists.txt  concurrent_unordered_map.hpp  config.hpp  console_util.cpp  console_util.hpp  distributed_clock.cpp  distributed_clock.hpp  global.cpp  global.hpp  hdfs_core.cpp  hdfs_core.hpp  indented_printer.hpp  mkl_util.cpp  mkl_util.hpp  mpi_config_namer.cpp  mpi_config_namer.hpp  mpi_profiler.cpp  mpi_profiler.hpp  mpi_timestamper.cpp  mpi_timestamper.hpp  mpi_unique_namer.cpp  mpi_unique_namer.hpp  mymath.hpp  simple_spinlock_guard.hpp  simple_thread_safe_map.hpp  tid_mapper.cpp  tid_mapper.hpp  tid_pool_manager.hpp  timer.cpp  timer.hpp  tool.hpp  type.cpp  type.hpp  ugly_thread_safe_map.hpp  unit.hpp  write_prior_rwlock.cpp  write_prior_rwlock.hpp  zmq.hpp
utils/iniparser/: CMakeLists.txt
(+43 files in other folders)
